@@ -24,8 +24,8 @@ dependencies {
     compile 'org.apache.commons:commons-dbcp2:2.8.0'
     compile 'log4j:log4j:1.2.17'
     compile 'com.oracle.ojdbc:ojdbc8:19.3.0.0'
-    compile 'org.springframework:spring-beans:5.3.8'
-    compile 'org.springframework:spring-jdbc:5.3.8'
+    compile 'org.springframework:spring-beans:5.3.9'
+    compile 'org.springframework:spring-jdbc:5.3.9'
     compile 'org.apache.httpcomponents:httpclient:4.5.13'
     compile 'commons-net:commons-net:3.6'
 
