@@ -1,3 +1,6 @@
+Sep 24, 2021
+  ontology extractor: fixed names for generated ontology files, for vervet and molerat
+
 Sep 21, 2021
   NCBI prep: added code to prep fna files for scaffold assemblies for loading into RGD JBrowse
   JBrowse tracks: added support for green monkey Vero_WHO_p1.0 assembly
